# Manga-Panel-Extractor

./: .gitignore  MANIFEST.in  main.py  requirements.txt  setup.cfg  setup.py
PanelExtractor/: PanelExtractor.py  __init__.py
text_detector/: craft_utils.py
