[metadata]
name = PanelExtractor
version = 0.1
author = Ito Yuma
author_email = yumai6205@gmail.com
description = A package for extracting panels from images.
url = https://github.com/parkbearpark/Manga-Panel-Extractor.git

[options]
packages = find:
install_requires =
    numpy
    scikit-image
    opencv-python
    torch
    torchvision
    tqdm
include_package_data = True

[options.packages.find]
where = .